cls.newInstance() 改为 cls.getDeclaredConstructor().newInstance()